crates/toml/tests/snapshots/invalid/integer/trailing-us-hex.stderr
TOML parse error at line 1, column 22
  |
1 | trailing-us-hex = 0x1_
  |                      ^
`_` may only go between digits, expected nothing
